--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.10
-      - name: setup python
-        run: |
-              python os.py
+      - name: Python file
+        run: os.py
+        shell: python
 
 
